<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/serverIPAddressLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:text="@string/server_ip_address_label"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toBottomOf="@+id/serverIPAddress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/serverIPAddress" />

    <TextView
        android:id="@+id/serverPortNumberLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/server_port_number_label"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toBottomOf="@+id/serverPortNumber"
        app:layout_constraintEnd_toEndOf="@+id/serverIPAddressLabel"
        app:layout_constraintTop_toTopOf="@+id/serverPortNumber" />

    <EditText
        android:id="@+id/serverIPAddress"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/server_default_ip_address"
        app:layout_constraintStart_toEndOf="@+id/serverIPAddressLabel"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/serverPortNumber"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/server_default_port_number"
        app:layout_constraintStart_toEndOf="@+id/serverIPAddressLabel"
        app:layout_constraintTop_toBottomOf="@+id/serverIPAddress" />

    <EditText
        android:id="@+id/photosPerCapture"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/default_photos_per_capture"
        app:layout_constraintStart_toEndOf="@+id/serverIPAddressLabel"
        app:layout_constraintTop_toBottomOf="@+id/serverPortNumber" />

    <TextView
        android:id="@+id/photosPerCaptureLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/photos_per_capture_label"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toBottomOf="@+id/photosPerCapture"
        app:layout_constraintEnd_toEndOf="@+id/serverIPAddressLabel"
        app:layout_constraintTop_toBottomOf="@+id/serverPortNumber" />
</androidx.constraintlayout.widget.ConstraintLayout>
